examples/simple/klee/klee-out-3/test000001.pc
array x[4] : w32 -> w8 = symbolic
array y[4] : w32 -> w8 = symbolic
(query [(Slt N0:(ReadLSB w32 0 x)
              0)
         (Sle 4294967295
              (Mul w32 2
                       (Add w32 N0
                                N1:(ReadLSB w32 0 y))))
         (Slt N1 0)]
        false)
